--- a/mdesapp_formulae.Rmd
+++ b/mdesapp_formulae.Rmd
@@ -50,8 +50,9 @@ $R^2_1$ is the proportion of the variance accounted for by the baseline covariat
 
 $R^2_2$ is the proportion of the variance accounted for by the baseline covariate at the cluster (schools or classes) level
 
+***
 
-*Note:* As mentioned in the EEF guidelines, when 20 or more clusters (schools or classes) are randomised, the multiplier $M_{J-k}$ takes the value of 2.8 for a two-tailed MDES and 2.5 for a one-tailed MDES. 
+**Note:** As mentioned in the EEF guidelines, when 20 or more clusters (schools or classes) are randomised, the multiplier $M_{J-k}$ takes the value of 2.8 for a two-tailed MDES and 2.5 for a one-tailed MDES, when $\alpha = 0.05$ (statistical significance) and $\beta = 0.8$ (statistical power). The [**mdesapp**](https://patricio-troncoso.shinyapps.io/mdesapp/) fixes these values. Future versions will allow for changing parameters $\alpha$ and $\beta$.  
 
 ***
 
