--- a/mdesapp_formulae.Rmd
+++ b/mdesapp_formulae.Rmd
@@ -102,9 +102,9 @@ a) calculate the difference between the estimated variance in a multilevel model
 
 b) divide the difference by the estimated variance in the empty multilevel model.
 
-This needs to be separately for the individual and the cluster level variance. 
+This needs to be done separately for the individual and the cluster level variance. 
 
-For further details, see for example: Hox, J. (2010, p71)[^3]
+For further details, see for example: Hox et al. (2017, p59)[^3]
 
 ***
 
@@ -113,6 +113,6 @@ For further details, see for example: Hox, J. (2010, p71)[^3]
 
 [^1]: Bloom, H., Richburg-Hayes, L. and Black, A.R. (2007) Using Covariates to Improve Precision for Studies that Randomise Schools to Evaluate Educational Interventions. Educational Evaluation and Policy Analysis, 29, No.1, pp.30-59.
 
-[^2]: Education Endowment Foundation. (2013). Pre-testing in EEF evaluations. London. Available at: https://educationendowmentfoundation.org.uk/public/files/Social_and_Emotional_Learning_Evidence_Review.pdf
+[^2]: Education Endowment Foundation. (2013). Pre-testing in EEF evaluations. London. Available at: https://educationendowmentfoundation.org.uk/public/files/Evaluation/Writing_a_Protocol_or_SAP/Pre-testing_paper.pdf
 
-[^3]: Hox, J. (2010). Multilevel Analysis.Techniques and Applications. Routledge. New York and Hove.
+[^3]: Hox, J., Moerbeek, M., van de Schoot, R. (2017). Multilevel Analysis: Techniques and Applications (3rd Ed). Routledge. New York and Hove.
